<resources>
    <string name="app_name">Nanny Meets</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="no_favourites_added_yet">No Favourites Added Yet</string>
    <string name="credit_default">5</string>
    <string name="credits">Credits</string>
    <string name="buy_more">BUY MORE</string>
    <string name="reset">RESET</string>
    <string name="use_filter_options">Use Filter Options</string>
    <string name="job_type">Job Type</string>
    <string name="maid">Maid</string>
    <string name="gardener">Gardener</string>
    <string name="other">Other</string>
    <string name="salary_range">Salary Range</string>
    <string name="min">Min</string>
    <string name="_0">0</string>
    <string name="max">Max</string>
    <string name="_100">100</string>
    <string name="rent_min">$0</string>
    <string name="rent_max">$1 000</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="_2">2</string>
    <string name="_20">20</string>
    <string name="filter_options">FILTER OPTIONS</string>
    <string name="apply">APPLY</string>
    <string name="credit_purchase">Credit Purchase</string>
    <string name="minus">-</string>
    <string name="dollar_sign">$</string>
    <string name="plus">+</string>
    <string name="totla_credits">Credits</string>
    <string name="buy">BUY</string>
    <string name="ecocash">Ecocash</string>
    <string name="paynow">Paynow</string>
    <string name="paypal">PAYPAL</string>
    <string name="account">Account</string>
    <string name="my_profile">My Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="preferred_employees">Preferred Employees</string>
</resources>