<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PreferredEmployeesActivity">
    <TextView
        android:id="@+id/tv_no_maids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_heavy_italic"
        android:text="@string/no_favourites_added_yet"
        android:textAlignment="center"
        android:textColor="#2e000000"
        android:textSize="40sp"
        android:visibility="invisible" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_maid_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_credit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/lato_bold"
                            android:text="@string/credit_default"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_italic"
                            android:text="@string/credits"
                            android:textColor="@color/colorPrimaryDark" />


                        <Button
                            android:id="@+id/btn_buy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:background="@color/colorPrimaryDark"
                            android:fontFamily="@font/lato_italic"
                            android:padding="0dp"
                            android:text="@string/buy_more"
                            android:textColor="@android:color/white"
                            android:textSize="24sp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_maids_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>